@@ -2,6 +2,8 @@
 
  - Changed folder's "getUpdatedFolders" query according to HTTP API spec to
    to query all folder GREATER THAN sent timestamp from GUI.
+ - Enhanced com.openexchange.tools.stack.Stack interface to offer size()
+   method
 
 * 2007-07-31 - francisco.laguna@open-xchange.com
 
